--- a/css/esqueci-senha.css
+++ b/css/esqueci-senha.css
@@ -36,18 +36,18 @@ body {
     font-weight: 600;
 }
 
-.conteudo {
+.container {
     flex: 1;
     text-align: center;
     padding: 60px 20px;
 }
 
-.conteudo h1 {
+.container h1 {
     color: #333;
     font-size: 2rem;
 }
 
-.conteudo p {
+.container p {
     color: #666;
     margin-bottom: 30px;
 }
@@ -121,6 +121,8 @@ input:focus {
 .btn.rosa {
     background-color: #f9a9cc;
     color: #fff;
+    height: 46px; 
+    font-size: 17px;
 }
 
 .btn.rosa:hover {
