--- a/css/index.css
+++ b/css/index.css
@@ -6,22 +6,20 @@
 }
 
 body {
-    /*background: linear-gradient(to bottom right, #fff6fa, #f7f8ff);*/
-    background: linear-gradient(135deg, #f8e8f1, #f4c8dc);
+    background: linear-gradient(to bottom right, #fff6fa, #f7f8ff);
     color: #333;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
-
-.topo {
-    /*background-color: #fdd7e2;*/
-    background-color: #fff;
-    padding: 15px 30px;
+.navbar {
+    background-color: #fdd7e2;
     display: flex;
+    justify-content: center;
     align-items: center;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    padding: 15px 60px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
 .logo {
@@ -31,24 +29,34 @@ body {
 }
 
 .logo img {
-    width: 32px;
-    height: 32px;
+    width: 35px;
+    height: 35px;
 }
 
-.nome {
+.nome-logo {
     color: #e26ca5;
-    font-size: 20px;
+    font-size: 23px;
     font-weight: 600;
 }
 
-.conteudo {
+/*Footer ou Rodape*/
+.rodape {
+    background-color: #fdd7e2;
+    text-align: center;
+    padding: 30px 0;
+    font-size: 0.9rem;
+    color: #666;
+    border-top: 1px solid #ccc;
+}
+
+/*Conteudo*/
+.container {
     flex: 1;
     text-align: center;
     padding: 80px 20px;
-    
 }
 
-.conteudo h1 {
+.container h1 {
     font-size: 2.5rem;
     color: #333;
 }
@@ -101,14 +109,6 @@ body {
     background-color: #fce4ef;
 }
 
-.rodape {
-    background-color: #fff;
-    text-align: center;
-    padding: 20px 0;
-    font-size: 0.9rem;
-    color: #666;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-}
 
 /* Responsivo */
 @media (max-width: 600px) {
