--- a/css/login.css
+++ b/css/login.css
@@ -7,6 +7,58 @@
 /* Fundo e centralização */
 body {
     font-family: "Poppins", sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+/*Barra de Navegação ou o Topo*/
+.navbar {
+    /* background-color: #fdd7e2; */
+    background-color: #fdd7e2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 60px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.logo img {
+    width: 35px;
+    height: 35px;
+}
+
+.nome-logo {
+    color: #e26ca5;
+    font-size: 23px;
+    font-weight: 600;
+}
+
+/*Footer ou Rodape*/
+.rodape {
+    background-color: #fdd7e2;
+    text-align: center;
+    padding: 30px 0;
+    font-size: 0.9rem;
+    color: #666;
+    border-top: 1px solid #ccc;
+}
+
+
+.card {
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    padding: 40px 30px;
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
 }
 
 /* Container principal */
@@ -21,41 +73,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.topo {
-    background-color: #fdd7e2;
-    padding: 10px 30px;
-    display: flex;
-    align-items: center;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.logo img {
-    width: 32px;
-    height: 32px;
-}
-
-.nome {
-    color: #e26ca5;
-    font-size: 20px;
-    font-weight: 600;
-}
-
-
-.card {
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    padding: 40px 30px;
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
 }
 
 .card h1 {
