--- a/css/manicure-cadastro.css
+++ b/css/manicure-cadastro.css
@@ -99,6 +99,36 @@ input:focus {
     margin-left: 15px;
     color: #888;
 }
+.servicos-opcoes {
+    display: flex;
+    gap: 20px;
+    margin: 10px 0 20px;
+}
+
+.servicos-opcoes label {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    background: #fdf6fa;
+    padding: 10px 15px;
+    border-radius: 25px;
+    border: 2px solid #f4c1dd;
+    cursor: pointer;
+    transition: 0.3s;
+    font-weight: 500;
+    color: #444;
+}
+
+.servicos-opcoes input[type="radio"] {
+    accent-color: #e26ca5; /* cor rosa */
+    width: 18px;
+    height: 18px;
+}
+
+.servicos-opcoes label:hover {
+    background: #fbe5f1;
+    border-color: #e26ca5;
+}
 
 .botoes {
     display: flex;
@@ -147,6 +177,9 @@ input:focus {
     font-size: 0.9rem;
     color: #666;
 }
+
+
+
 @media (max-width: 600px) {
     .conteudo h1 {
         font-size: 1.8rem;
