--- a/css/cliente-agenda.css
+++ b/css/cliente-agenda.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  
+
   background: linear-gradient(135deg, #f8e8f1, #f4c8dc);
   min-height: 100vh;
   display: flex;
@@ -22,14 +22,14 @@ body {
 }
 
 .logo img {
-    width: 32px;
-    height: 32px;
+  width: 32px;
+  height: 32px;
 }
 
 .nome-logo {
-    color: #e26ca5;
-    font-size: 20px;
-    font-weight: 600;
+  color: #e26ca5;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 /*Barra de navegação*/
@@ -39,7 +39,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 15px 60px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 nav ul {
@@ -56,33 +56,35 @@ nav a {
   transition: 0.3s;
 }
 
-nav a:hover, nav a.ativo {
+nav a:hover,
+nav a.ativo {
   color: #e26ca5;
 }
 
 .rodape {
-    background-color: #fff;
-    text-align: center;
-    padding: 30px 0;
-    font-size: 0.9rem;
-    color: #666;
-    border-top: 1px solid #ccc;
+  background-color: #fff;
+  text-align: center;
+  padding: 30px 0;
+  font-size: 0.9rem;
+  color: #666;
+  border-top: 1px solid #ccc;
 }
 
 h1 {
-    font-size: 2rem;
-    color: #333;
-    padding: 30px;
+  font-size: 2rem;
+  color: #333;
+  padding: 30px;
 }
 
 .card {
-    background: #fff;
-    margin: 0 auto;
-    padding: 30px;
-    border-radius: 16px;
-    width: 1000px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    text-align: left;
+  background: #fff;
+  margin: 0 auto;
+  padding: 30px;
+  border-radius: 16px;
+  width: 1300px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  text-align: left;
+  margin-bottom: 30px;
 }
 
 /* Caixa personalizada dos detalhes do serviço */
@@ -262,6 +264,13 @@ h1 {
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-10px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
